--- a/materialrangebar/build.gradle
+++ b/materialrangebar/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 /**
  In order to push the library to Bintray we need to execute the
  following gradle commands in the given sequence.
@@ -36,12 +37,12 @@ ext {
  * This is needed because we want to compile this as android library so that we can test it before publishing
  */
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion 30
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 29
+        minSdkVersion 24
+        targetSdkVersion 30
         versionCode 1
         versionName libraryVersion
     }
@@ -54,7 +55,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.2.0'
+    implementation 'androidx.core:core:1.3.1'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 /**
@@ -99,3 +102,6 @@ task createPom {
 // Place it at the end of the file
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+repositories {
+    mavenCentral()
+}
