--- a/RangeBarSample/build.gradle
+++ b/RangeBarSample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 dependencies {
     implementation project(':materialrangebar')
@@ -8,6 +9,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.core:core:1.3.1'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 android {
     compileSdkVersion 30
@@ -63,4 +66,7 @@ if (propFile.canRead()) {
 } else {
     println "RELEASE_BUILD: signing properties not found"
     android.buildTypes.release.signingConfig = null
+}
+repositories {
+    mavenCentral()
 }
